feat(themes): theming through css variables
Initial commit intruducint the ability to theme components using css
variables.

--- a/src/core/styles/base/_variables.scss
+++ b/src/core/styles/base/_variables.scss
@@ -12,10 +12,13 @@ $browser-context: 16px !default;
 /// @type String
 $browser-line-height: 27px !default;
 
-/// The global keyframes registry list.
+/// The global keyframes registry map.
 /// @type List
 $keyframes: () !default;
 
-/// The global component registry list.
+/// The global component registry map.
 /// @type List
 $components: () !default;
+
+/// The global themes registry map.
+$themes: () !default;
