--- a/src/core/styles/components/date-picker/_date-picker-theme.scss
+++ b/src/core/styles/components/date-picker/_date-picker-theme.scss
@@ -6,20 +6,16 @@
 ////
 
 /// Date Picker
-@function igx-date-picker-theme() {
-    @return ();
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
+///
+/// @requires extend
+@function igx-date-picker-theme($palette: $default-palette) {
+    $default-theme: (name: 'igx-date-picker');
+    @return extend($default-theme, ($palette: $palette));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-date-picker-theme
-/// @requires extend
-@mixin igx-date-picker($theme, $palette: $default-palette) {
-
-    $default-theme: igx-date-picker-theme();
-
-    $this: extend($default-theme, $theme);
-
+@mixin igx-date-picker($theme) {
     %date-picker-display {
         width: 340px;
     }
