--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -5,19 +5,30 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @param {Color} $header-background [null] - The table header background color.
 /// @param {Color} $header-text-color [null] - The table header text color.
-/// @param {Color} $resize-line-color [null] - The table header resize line color.
 /// @param {Color} $content-background [null] - The table body background color.
 /// @param {Color} $content-text-color [null] - The table body text color.
-/// @param {Color} $row-border-color [null] - The row bottom border color.
 /// @param {Color} $row-selected-background [null] - The selected row background color.
 /// @param {Color} $row-selected-text-color [null] - The selected row text color.
 /// @param {Color} $row-hover-background [null] - The hover row background color.
+/// @param {Color} $row-border-color [null] - The row bottom border color.
+/// @param {Color} $pinned-border-width [null] - The border width of the pinned border.
+/// @param {Color} $pinned-border-style [null] - The CSS border style of the pinned border.
+/// @param {Color} $pinned-border-color [null] - The color of the pinned border.
 /// @param {Color} $cell-selected-background [null] - The selected cell background color.
 /// @param {Color} $cell-selected-text-color [null] - The selected cell text color.
+/// @param {Color} $resize-line-color [null] - The table header resize line color.
+///
+/// @requires igx-color
+/// @requires igx-contrast-color
 /// @requires text-contrast
+/// @requires hexrgba
+/// @requires extend
 @function igx-grid-theme(
+    $palette: $default-palette,
+
     $header-background: null,
     $header-text-color: null,
 
@@ -38,6 +49,30 @@
 
     $resize-line-color: null
 ) {
+    $default-theme: (
+        name: 'igx-grid',
+
+        header-background: hexrgba(igx-color($palette, 'grays', 100)),
+        header-text-color: igx-color($palette, 'grays', 600),
+
+        content-background: #fff,
+        content-text-color: igx-color($palette, 'grays', 800),
+
+        row-selected-background: hexrgba(igx-color($palette, 'grays', 800)),
+        row-selected-text-color: igx-contrast-color($palette, 'grays', 900),
+        row-hover-background: hexrgba(igx-color($palette, 'grays', 100)),
+        row-border-color: igx-color($palette, 'grays', 300),
+
+        pinned-border-width: 2px,
+        pinned-border-style: solid,
+        pinned-border-color: igx-color($palette, 'grays', 400),
+
+        cell-selected-background: igx-color($palette, 'primary'),
+        cell-selected-text-color: igx-contrast-color($palette, 'primary'),
+
+        resize-line-color: igx-color($palette, 'secondary')
+    );
+
     @if not($header-text-color) and $header-background {
         $header-text-color: text-contrast($header-background);
     }
@@ -66,7 +101,9 @@
         $pinned-border-color: rgba(text-contrast($content-background), .08)
     }
 
-    @return (
+    @return extend($default-theme, (
+        palette: $palette,
+
         header-background: $header-background,
         header-text-color: $header-text-color,
 
@@ -86,59 +123,34 @@
         cell-selected-text-color: $cell-selected-text-color,
 
         resize-line-color: $resize-line-color
-    );
+    ));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-grid-theme
+/// @requires {mixin} igx-root-css-vars
+/// @requires {mixin} ellipsis
 /// @requires igx-color
 /// @requires igx-contrast-color
 /// @requires igx-elevation
 /// @requires $elevations
-/// @requires extend
 /// @requires rem
-@mixin igx-grid($theme, $palette: $default-palette) {
-    $default-theme: igx-grid-theme(
-        $header-background: hexrgba(igx-color($palette, 'grays', 100)),
-        $header-text-color: igx-color($palette, 'grays', 600),
+/// @requires var
+@mixin igx-grid($theme) {
+    @include igx-root-css-vars($theme);
 
-        $content-background: #fff,
-        $content-text-color: igx-color($palette, 'grays', 800),
+    $palette: map-get($theme, 'palette');
+    // @debug $theme;
 
-        $row-selected-background: hexrgba(igx-color($palette, 'grays', 800)),
-        $row-selected-text-color: igx-contrast-color($palette, 'grays', 900),
-        $row-hover-background: hexrgba(igx-color($palette, 'grays', 100)),
-        $row-border-color: igx-color($palette, 'grays', 300),
-
-        $pinned-border-width: 2px,
-        $pinned-border-style: solid,
-        $pinned-border-color: igx-color($palette, 'grays', 400),
-
-        $cell-selected-background: igx-color($palette, 'primary'),
-        $cell-selected-text-color: igx-contrast-color($palette, 'primary'),
-
-        $resize-line-color: igx-color($palette, 'secondary')
-    );
-
-    $this: extend($default-theme, $theme);
-
-    // @debug $this;
-
-    // General
     $grid-br: 2px;
     $grid-shadow: igx-elevation($elevations, 2);
 
-    // Caption
     $grid-caption-fs: rem(20px);
     $grid-caption-lh: rem(32px);
     $grid-caption-padding: rem(16px) rem(24px);
 
-    // Heading
     $grid-head-fs: rem(12px);
     $grid-head-fw: 600;
 
-    // Cell
     $grid-cell-padding: rem(16px) rem(24px);
     $grid-cell-align-num: right;
     $grid-cell-fs: rem(13px);
@@ -146,10 +158,9 @@
     $grid-cell-pinned-style: 1px solid;
     $grid-cell-pinned-border-color: igx-color($palette, 'grays', 300);
 
-    // Pinning
     $cell-pin: (
-        style: map-get($this, 'pinned-border-width') map-get($this, 'pinned-border-style'),
-        color: map-get($this, 'pinned-border-color')
+        style: var($theme, 'pinned-border-width') var($theme, 'pinned-border-style'),
+        color: var($theme, 'pinned-border-color')
     );
 
     %grid-display {
@@ -174,8 +185,8 @@
     %grid-tfoot {
         position: relative;
         display: block;
-        background: map-get($this, 'header-background');
-        color: map-get($this, 'header-text-color');
+        background: var($theme, 'header-background');
+        color: var($theme, 'header-text-color');
 
         %grid-row {
             background: inherit;
@@ -210,8 +221,8 @@
     %grid-tbody {
         position: relative;
         grid-row: 2;
-        background: map-get($this, 'content-background');
-        color: map-get($this, 'content-text-color');
+        background: var($theme, 'content-background');
+        color: var($theme, 'content-text-color');
         overflow: hidden;
         z-index: 1;
     }
@@ -227,7 +238,7 @@
         flex-flow: row nowrap;
         grid-row: 5;
         width: 100%;
-        background: map-get($this, 'header-background');
+        background: var($theme, 'header-background');
     }
 
     %grid-scroll-start {
@@ -242,8 +253,8 @@
 
     %grid-row {
         display: flex;
-        background-color: map-get($this, 'content-background');
-        border-bottom: 1px solid map-get($this, 'row-border-color');
+        background-color: var($theme, 'content-background');
+        border-bottom: 1px solid var($theme, 'row-border-color');
         outline-style: none;
 
         &:last-of-type {
@@ -251,16 +262,16 @@
         }
 
         &:hover {
-            background-color: map-get($this, 'row-hover-background');
+            background-color: var($theme, 'row-hover-background');
         }
     }
 
     %grid-row--selected {
-        color: map-get($this, 'row-selected-text-color');
-        background-color: map-get($this, 'row-selected-background');
+        color: var($theme, 'row-selected-text-color');
+        background-color: var($theme, 'row-selected-background');
 
         &:hover {
-            background-color: map-get($this, 'row-selected-background');
+            background-color: var($theme, 'row-selected-background');
         }
     }
 
@@ -282,8 +293,8 @@
     }
 
     %grid-cell--selected {
-        color: map-get($this, 'cell-selected-text-color');
-        background-color: map-get($this, 'cell-selected-background') !important;
+        color: var($theme, 'cell-selected-text-color');
+        background-color: var($theme, 'cell-selected-background') !important;
         border-bottom: 0;
     }
 
@@ -294,7 +305,7 @@
     }
 
     %grid-cell--pinned-last {
-        border-right: map-get($cell-pin, 'style') map-get($cell-pin, 'color') !important;
+        border-right: var($cell-pin, 'style') var($cell-pin, 'color') !important;
     }
 
     %grid-cell-header {
@@ -377,7 +388,7 @@
         position: absolute;
         cursor: col-resize;
         width: 4px;
-        background-color: map-get($this, 'resize-line-color');
+        background-color: var($theme, 'resize-line-color');
         z-index: 2;
 
         &::before,
