--- a/src/core/styles/components/icon/_icon-theme.scss
+++ b/src/core/styles/components/icon/_icon-theme.scss
@@ -5,51 +5,59 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @param {Color} $color [null] - The icon color.
 /// @param {String} $size [null] - The icon size.
 /// @param {Color} $disabled-color [null] - The disabled icon color.
+///
+/// @requires igx-color
+/// @requires extend
+/// @requires rem
+///
 /// @example scss Change the icon color
 ///   $my-icon-theme: igx-icon-theme($color: orange);
 ///   // Pass the theme to the igx-icon component mixin
 ///   @include igx-icon($my-icon-theme);
 @function igx-icon-theme(
+    $palette: $default-palette,
     $color: null,
     $size: null,
     $disabled-color: null
 ) {
-    @return (
+    $default-theme: (
+        name: 'igx-icon',
+        color: currentColor,
+        size: rem(24px),
+        disabled-color: igx-color($palette, 'grays', 500)
+    );
+
+    @return extend($default-theme, (
+        palette: $palette,
         color: $color,
         size: $size,
-        disabled-color: $disabled-color);
+        disabled-color: $disabled-color
+    ));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-icon-theme
-/// @requires igx-color
-/// @requires extend
+/// @requires {mixin} igx-root-css-vars
 /// @requires rem
-@mixin igx-icon($theme, $palette: $default-palette) {
-    $default-theme: igx-icon-theme(
-        $color: currentColor,
-        $size: 24px,
-        $disabled-color: igx-color($palette, 'grays', 500)
-    );
+/// @requires var
+@mixin igx-icon($theme) {
+    @include igx-root-css-vars($theme);
 
-    $this: extend($default-theme, $theme);
+    // @debug $theme;
 
-    // @debug $this;
-
-    $igx-icon-font-size: rem(map-get($this, 'size'));
+    $igx-icon-font-size: var($theme, 'size');
 
     %igx-icon-display {
         width: $igx-icon-font-size;
         height: $igx-icon-font-size;
         font-size: $igx-icon-font-size;
-        color: map-get($this, 'color');
+        color: var($theme, 'color');
     }
 
     %igx-icon--inactive {
-        color: map-get($this, 'disabled-color') !important;
+        color: var($theme, 'disabled-color') !important;
     }
 }
