--- a/src/core/styles/components/navdrawer/_navdrawer-theme.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-theme.scss
@@ -5,6 +5,7 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @param {Color} $background [null] - The navigation drawer background color.
 /// @param {Color} $border-color [null] - The navigation drawer right border color.
 /// @param {Color} $item-header-text-color [null] - The header's idle text color.
@@ -17,6 +18,8 @@
 /// @param {Color} $item-hover-text-color [null] - The item's hover text color.
 /// @param {Color} $item-hover-icon-color [null] - The item's hover icon color.
 ///
+/// @requires extend
+/// @requires igx-color
 /// @requires text-contrast
 ///
 /// @example scss Change the background and item colors
@@ -28,6 +31,8 @@
 ///   // Pass the theme to the igx-navdrawer component mixin
 ///   @include igx-navdrawer($navdrawer-theme);
 @function igx-navdrawer-theme(
+    $palette: $default-palette,
+
     $background: null,
     $border-color: null,
 
@@ -43,6 +48,21 @@
     $item-hover-text-color: null,
     $item-hover-icon-color: null
 ) {
+    $default-theme: (
+        name: 'igx-navdrawer',
+        background: #fff,
+        border-color: rgba(0, 0, 0, .14),
+        item-text-color: igx-color($palette, grays, 800),
+        item-active-text-color: igx-color($palette, primary, 500),
+        item-active-background: igx-color($palette, grays, 100),
+        item-hover-background: igx-color($palette, grays, 200),
+        item-hover-text-color: igx-color($palette, grays, 800),
+        item-header-text-color: igx-color($palette, grays, 600),
+        item-icon-color: igx-color($palette, grays, 600),
+        item-active-icon-color: igx-color($palette, primary, 500),
+        item-hover-icon-color: igx-color($palette, grays, 800)
+    );
+
     @if not($item-header-text-color) and $background {
         $item-header-text-color: text-contrast($background);
     }
@@ -75,7 +95,8 @@
         $item-hover-text-color: text-contrast($background);
     }
 
-    @return (
+    @return extend($default-theme, (
+        palette: $palette,
         background: $background,
         border-color: $border-color,
         item-text-color:$item-text-color,
@@ -87,34 +108,18 @@
         item-icon-color:$item-icon-color,
         item-active-icon-color:$item-active-icon-color,
         item-hover-icon-color: $item-hover-icon-color
-    );
+    ));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-navdrawer-theme
+/// @requires {mixin} igx-root-css-vars
 /// @requires igx-color
 /// @requires igx-elevation
 /// @requires $elevations
 /// @requires $overlay-color
-/// @requires extend
 /// @requires rem
-@mixin igx-navdrawer($theme, $palette: $default-palette) {
-    $default-theme: igx-navdrawer-theme(
-        $background: #fff,
-        $border-color: rgba(0, 0, 0, .14),
-        $item-text-color: igx-color($palette, grays, 800),
-        $item-active-text-color: igx-color($palette, primary, 500),
-        $item-active-background: igx-color($palette, grays, 100),
-        $item-hover-background: igx-color($palette, grays, 200),
-        $item-hover-text-color: igx-color($palette, grays, 800),
-        $item-header-text-color: igx-color($palette, grays, 600),
-        $item-icon-color: igx-color($palette, grays, 600),
-        $item-active-icon-color: igx-color($palette, primary, 500),
-        $item-hover-icon-color: igx-color($palette, grays, 800)
-    );
-
-    $this: extend($default-theme, $theme);
+@mixin igx-navdrawer($theme) {
+    @include igx-root-css-vars($theme);
 
     %animation {
         transition: flex-basis;
@@ -129,7 +134,7 @@
         max-width: 90%;
         min-height: 100%;
         overflow-x: hidden;
-        background-color: map-get($this, 'background');
+        background-color: var($theme, 'background');
         top: 0;
         bottom: 0;
         left: 0;
@@ -138,7 +143,7 @@
         transition-duration: .3s, .3s;
         transition-timing-function: $ease-out-quad, $ease-out-quad;
         box-shadow: igx-elevation($elevations, 5);
-        border-right: 1px solid map-get($this, 'border-color');
+        border-right: 1px solid var($theme, 'border-color');
     }
 
     %aside-panning {
@@ -168,7 +173,7 @@
         left: auto;
         right: 0;
         border-right: none;
-        border-left: 1px solid map-get($this, 'border-color');
+        border-left: 1px solid var($theme, 'border-color');
     }
 
     %aside--collapsed--right {
@@ -216,9 +221,8 @@
     %item {
         position: relative;
         display: flex;
-        // flex: 1 0 100%;
         flex-flow: row nowrap;
-        color: map-get($this, 'item-text-color');
+        color: var($theme, 'item-text-color');
         max-height: 48px;
         padding: 12px 16px;
         cursor: pointer;
@@ -231,8 +235,8 @@
 
         &:hover,
         &:focus {
-            background-color: map-get($this, 'item-hover-background');
-            color: map-get($this, 'item-hover-text-color');
+            background-color: var($theme, 'item-hover-background');
+            color: var($theme, 'item-hover-text-color');
         }
 
         > igx-icon + span {
@@ -246,23 +250,23 @@
         }
 
         .igx-icon {
-            color: map-get($this, 'item-icon-color');
+            color: var($theme, 'item-icon-color');
         }
     }
 
     %item--active {
         // should be app primary color
-        color: map-get($this, 'item-active-text-color');
-        background-color: map-get($this, 'item-active-background');
+        color: var($theme, 'item-active-text-color');
+        background-color: var($theme, 'item-active-background');
 
         &:focus,
         &:hover {
-            color: map-get($this, 'item-active-text-color');
-            background-color: map-get($this, 'item-active-background');
+            color: var($theme, 'item-active-text-color');
+            background-color: var($theme, 'item-active-background');
         }
 
         .igx-icon {
-            color: map-get($this, 'item-active-icon-color');
+            color: var($theme, 'item-active-icon-color');
         }
     }
 
@@ -270,7 +274,7 @@
         display: block;
         padding: 12px 16px;
         white-space: nowrap;
-        color: map-get($this, 'item-header-text-color');
+        color: var($theme, 'item-header-text-color');
     }
 
     %style-dummy {
