--- a/src/core/styles/components/switch/_switch-component.scss
+++ b/src/core/styles/components/switch/_switch-component.scss
@@ -12,7 +12,7 @@
     @extend %switch-display !optional;
 
     @include e(input) {
-        @include hide-default();
+        @extend %switch-input !optional;
     }
 
     @include e(composite) {
