--- a/src/core/styles/components/dialog/_dialog-theme.scss
+++ b/src/core/styles/components/dialog/_dialog-theme.scss
@@ -5,55 +5,59 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
+/// Dialog Theme
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @param {Color} $background [null] - The dialog background color.
 /// @param {Color} $title-color [null] - The dialog title text color.
 /// @param {Color} $message-color [null] - The dialog message text color.
+///
+/// @requires extend
 /// @requires text-contrast
+/// @requires igx-color
 ///
 /// @example scss Change the background color
 ///   $my-dialog-theme: igx-dialog-theme($background: black);
 ///   // Pass the theme to the igx-dialog component mixin
 ///   @include igx-dialog($my-dialog-theme);
 @function igx-dialog-theme(
+    $palette: $default-palette,
     $background: null,
     $title-color: null,
     $message-color: null
 ) {
+    $default-theme: (
+        name: 'igx-dialog',
+        background: #fff,
+        title-color: igx-color($palette, grays, 800),
+        message-color: igx-color($palette, grays, 600)
+    );
+
     @if not($title-color) and $background{
-        $title-color: text-contrast($background) ;
+        $title-color: text-contrast($background);
     }
 
     @if not($message-color) and $background{
-        $message-color: rgba(text-contrast($background), .8) ;
+        $message-color: rgba(text-contrast($background), .8);
     }
 
-    @return (
+    @return extend($default-theme, (
+        palette: $palette,
         background: $background,
         title-color: $title-color,
         message-color: $message-color
-    );
+    ));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-dialog-theme
-/// @requires igx-color
+/// @requires {mixin} igx-root-css-vars
 /// @requires igx-elevation
 /// @requires $elevations
 /// @requires $overlay-color
-/// @requires extend
-/// @requires em
-@mixin igx-dialog($theme, $palette: $default-palette) {
+/// @requires rem
+/// @requires var
+@mixin igx-dialog($theme) {
+    @include igx-root-css-vars($theme);
 
-    $default-theme: igx-dialog-theme(
-        $background: #fff,
-        $title-color: igx-color($palette, grays, 800),
-        $message-color: igx-color($palette, grays, 600)
-    );
-
-    $this: extend($default-theme, $theme);
-
-    // $dialog-max-width: em(400px);
     $dialog-min-width: rem(280px);
 
     $dialog-title-font-size: rem(20px);
@@ -65,9 +69,7 @@
     $dialog-message-line-height: rem(18px);
 
     $dialog-message-padding: rem(12px) rem(24px);
-
     $dialog-message-font-weight: 400;
-
     $dialog-actions-padding: rem(8px);
 
     %igx-dialog-display {
@@ -91,13 +93,13 @@
         position: relative;
         min-width: $dialog-min-width;
         border-radius: 2px;
-        background: map-get($this, 'background');
+        background: var($theme, 'background');
         box-shadow: igx-elevation($elevations, 24);
         overflow: hidden;
     }
 
     %igx-dialog-title {
-        color: map-get($this, 'title-color');
+        color: var($theme, 'title-color');
         font-size: $dialog-title-font-size;
         line-height: $dialog-title-line-height;
         padding: $dialog-title-padding;
@@ -105,7 +107,7 @@
     }
 
     %igx-dialog-content {
-        color: map-get($this, 'message-color');
+        color: var($theme, 'message-color');
         max-width: 40ch;
         font-size: $dialog-message-font-size;
         line-height: $dialog-message-line-height;
