--- a/src/core/styles/components/grid-summary/_grid-summary-theme.scss
+++ b/src/core/styles/components/grid-summary/_grid-summary-theme.scss
@@ -4,11 +4,21 @@
 /// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
+
+/// Grid Summary Theme
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @param {Color} $background-color [null] - The summaries background color.
 /// @param {Color} $label-color [null] - The summaries label color.
 /// @param {Color} $result-color [null] - The summaries value/result color.
 /// @param {Color} $border-color [null] - The summaries border color.
-/// @param {Color} $inactive-color [null] - The summaries inactive label color color.
+/// @param {Color} $pinned-border-width - The border width of the summary panel.
+/// @param {Color} $pinned-border-style - The border style of the summary panel.
+/// @param {Color} $pinned-border-color - The border color of the summary panel.
+/// @param {Color} $inactive-color [null] - The summaries inactive label color.
+/// @param {Color} $label-hover-color [null] - The summaries hover label color.
+///
+/// @requires extend
+/// @requires igx-color
 ///
 /// @example scss Change the summaries background nad labels color
 ///   $my-summary-theme: igx-grid-summary-theme(
@@ -17,8 +27,8 @@
 ///   );
 ///   // Pass the theme to the igx-grid-filtering component mixin
 ///   @include igx-grid-summary($my-summary-theme);
-
 @function igx-grid-summary-theme(
+    $palette: $default-palette,
     $background-color: null,
     $label-color: null,
     $result-color: null,
@@ -29,7 +39,21 @@
     $inactive-color: null,
     $label-hover-color: null
 ) {
-    @return (
+    $default-theme: (
+        name: 'igx-grid-summary',
+        background-color: rgba(0, 0, 0, .02),
+        label-color: igx-color($palette, 'primary', 500),
+        label-hover-color: igx-color($palette, 'primary', 700),
+        result-color: igx-color($palette, 'grays', 800),
+        border-color: igx-color($palette, 'grays', 400),
+        pinned-border-width: 2px,
+        pinned-border-style: solid,
+        pinned-border-color: igx-color($palette, 'grays', 400),
+        inactive-color: igx-color($palette, 'grays', 400)
+    );
+
+    @return extend($default-theme, (
+        palette: $palette,
         background-color: $background-color,
         label-color: $label-color,
         result-color: $result-color,
@@ -39,38 +63,27 @@
         pinned-border-color: $pinned-border-color,
         inactive-color: $inactive-color,
         label-hover-color: $label-hover-color
-    );
+    ));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-grid-summary-theme
+/// @requires {mixin} igx-root-css-vars
 /// @requires igx-color
-
-@mixin igx-grid-summary($theme, $palette: $default-palette) {
-    $default-theme: igx-grid-summary-theme(
-        $background-color: rgba(0, 0, 0, .02),
-        $label-color: igx-color($palette, 'primary', 500),
-        $label-hover-color: igx-color($palette, 'primary', 700),
-        $result-color: igx-color($palette, 'grays', 800),
-        $border-color: igx-color($palette, 'grays', 400),
-        $pinned-border-width: 2px,
-        $pinned-border-style: solid,
-        $pinned-border-color: igx-color($palette, 'grays', 400),
-        $inactive-color: igx-color($palette, 'grays', 400)
-    );
-
-    $this: extend($default-theme, $theme);
+/// @requires {mixin} ellipsis
+/// @requires var
+/// @requires rem
+@mixin igx-grid-summary($theme) {
+    @include igx-root-css-vars($theme);
 
     $cell-pin: (
-        style: map-get($this, 'pinned-border-width') map-get($this, 'pinned-border-style'),
-        color: map-get($this, 'pinned-border-color')
+        style: var($theme, 'pinned-border-width') var($theme, 'pinned-border-style'),
+        color: var($theme, 'pinned-border-color')
     );
 
     %igx-grid-summary {
         display: flex;
         flex-direction: column;
-        border-left: 1px dotted map-get($this, 'border-color');
+        border-left: 1px dotted var($theme, 'border-color');
         flex: 1 1 0%;
         padding: 0 rem(24px);
         overflow: hidden;
@@ -91,11 +104,11 @@
     }
 
     %igx-grid-summary--pinned-last {
-        border-right: map-get($cell-pin, 'style') map-get($cell-pin, 'color');
+        border-right: var($cell-pin, 'style') var($cell-pin, 'color');
     }
 
     %igx-grid-summary--empty {
-        border-left: 1px dotted map-get($this, 'border-color');
+        border-left: 1px dotted var($theme, 'border-color');
     }
 
     %igx-grid-summary__item {
@@ -107,17 +120,17 @@
     }
 
     %igx-grid-summary__label {
-        color: map-get($this, 'label-color');
+        color: var($theme, 'label-color');
         min-width: rem(30px);
         margin-right: rem(3px);
 
         &:hover {
-            color: map-get($this, 'label-hover-color');
+            color: var($theme, 'label-hover-color');
         }
     }
 
     %igx-grid-summary__result {
-        color: map-get($this, 'result-color');
+        color: var($theme, 'result-color');
         font-weight: 800;
         flex: 1 1 auto;
         text-align: right;
@@ -125,7 +138,7 @@
 
     %igx-grid-summary__item--inactive {
         %igx-grid-summary__label {
-            color: map-get($this, 'inactive-color');
+            color: var($theme, 'inactive-color');
         }
 
         %igx-grid-summary__result {
