--- a/src/core/styles/components/navbar/_navbar-theme.scss
+++ b/src/core/styles/components/navbar/_navbar-theme.scss
@@ -5,24 +5,40 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
+/// Navbar Theme
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @param {Color} $background [null] - The navbar background color.
 /// @param {Color} $text-color [null] - The navbar text color.
 /// @param {Color} $idle-icon-color [null] - The navbar idle icon color.
 /// @param {Color} $hover-icon-color [null] - The navbar hover icon color.
 /// @param {Bool} $disable-shadow [true] - Sets the navbar shadow visibility.
+///
+/// @requires extend
 /// @requires text-contrast
+/// @requires igx-elevations
+/// @requires $elevations
 ///
 /// @example scss Change the background color
 ///   $my-navbar-theme: igx-navbar-theme($background: green);
 ///   // Pass the theme to the igx-navbar component mixin
 ///   @include igx-navbar($my-navbar-theme);
 @function igx-navbar-theme(
+    $palette: $default-palette,
     $background: null,
     $text-color: null,
     $idle-icon-color: null,
     $hover-icon-color: null,
     $disable-shadow: false
 ) {
+    $default-theme: (
+        name: 'igx-navbar',
+        background: igx-color($palette, 'primary'),
+        text-color: #fff,
+        idle-icon-color: #fff,
+        hover-icon-color: #fff,
+        nav-shadow: if($disable-shadow == false, igx-elevation($elevations, 4), none)
+    );
+
     @if not($text-color) and $background {
         $text-color: text-contrast($background);
     }
@@ -35,37 +51,21 @@
         $hover-icon-color: text-contrast($background);
     }
 
-    @return (
+    @return extend($default-theme, (
+        palette: $palette,
         background: $background,
         text-color: $text-color,
         idle-icon-color: $idle-icon-color,
-        hover-icon-color: $hover-icon-color,
-        disable-shadow: $disable-shadow
-    );
+        hover-icon-color: $hover-icon-color
+    ));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-navbar-theme
-/// @requires igx-color
-/// @requires extend
+/// @requires {mixin} igx-root-css-vars
 /// @requires em
-@mixin igx-navbar($theme, $palette: $default-palette) {
-    $default-theme: igx-navbar-theme(
-        $background: igx-color($palette, 'primary'),
-        $text-color: #fff,
-        $idle-icon-color: #fff,
-        $hover-icon-color: #fff
-    );
-
-    $this: extend($default-theme, $theme);
-
-
-    $nav-shadow: igx-elevation($elevations, 4);
-
-    @if map-get($this, 'disable-shadow') == true {
-        $nav-shadow: none;
-    }
+/// @requires var
+@mixin igx-navbar($theme) {
+    @include igx-root-css-vars($theme);
 
     $navbar-padding: 0 em(16px);
     $navbar-title-fz: em(18px, 16px);
@@ -81,9 +81,9 @@
         width: 100%;
         height: 56px;
         padding: $navbar-padding;
-        background: map-get($this, 'background');
-        color: map-get($this, 'text-color');
-        box-shadow: $nav-shadow;
+        background: var($theme, 'background');
+        color: var($theme, 'text-color');
+        box-shadow: var($theme, 'nav-shadow');
         z-index: 4;
     }
 
@@ -106,11 +106,11 @@
     %igx-navbar-icon-display {
         igx-icon {
             cursor: pointer;
-            color: map-get($this, 'idle-icon-color');
+            color: var($theme, 'idle-icon-color');
             transition: color .15s $ease-out-quad;
 
             &:hover {
-                color: map-get($this, 'hover-icon-color');
+                color: var($theme, 'hover-icon-color');
             }
         }
     }
