--- a/src/core/styles/components/slider/_slider-theme.scss
+++ b/src/core/styles/components/slider/_slider-theme.scss
@@ -5,71 +5,91 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
-/// @param {Color} $track-on-color [null] - The color of the track when the switch is on.
-/// @param {Color} $thumb-off-color [null] - The color of the thumb when the switch is off.
-/// @param {Color} $thumb-disabled-color [null] - The color of the thumb when the switch is disabled.
-/// @param {Color} $track-disabled-color [null] - The color of the track when the switch is disabled.
-/// @param {Bool} $light [false] - Determines the default color scheme - light or not.
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
+/// @param {Color} $track-color [null] - The color of the track.
+/// @param {Color} $thumb-color [null] - The color of the thumb.
+/// @param {Color} $label-background-color [null] - The background color of the bubble label.
+/// @param {Color} $label-text-color [null] - The text color of the bubble label.
+/// @param {Bool} $light [false] - Determines the default color scheme - light or dark.
+/// @param {Bool} $variant ['dark'] - Determines the default color scheme - can be 'light' or 'dark'.
+///
+/// @requires extend
+/// @requires igx-color
+/// @requires text-contrast
+/// @requires hexrgba
+///
 /// Set light to true when the surrounding area is dark.
 /// @example scss Set custom track and thumb on colors
 ///   $my-switch-theme: igx-toast-theme($thumb-on-color: black, $track-on-color: yellow);
 ///   // Pass the theme to the igx-bottom-nav component mixin
 ///   @include igx-switch($my-switch-theme);
 @function igx-slider-theme(
+    $palette: $default-palette,
+
     $track-color: null,
     $thumb-color: null,
-    $label-color: null,
-    $light: false
-) {
-    @return (
-        track-color: $track-color,
-        thumb-color: $thumb-color,
-        label-color: $label-color,
-        light: $light
-    );
-}
 
-/// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-slider-theme
-/// @requires igx-color
-/// @requires hexrgba
-/// @requires extend
-/// @requires rem
-@mixin igx-slider($theme, $palette: $default-palette) {
+    $label-background-color: null,
+    $label-text-color: null,
+
+    $light: false,
+    $variant: 'dark'
+) {
+    $name: 'igx-slider';
+
     $dark-theme: (
+        name: $name,
         track-color: igx-color($palette, 'secondary'),
 
         thumb-color: igx-color($palette, 'secondary'),
         disabled-thumb-color: hexrgba(igx-color($palette, 'grays', 400)),
 
-        label-color: igx-color($palette, 'secondary'),
+        label-background-color: igx-color($palette, 'secondary'),
 
         base-track-color: igx-color($palette, 'grays'),
         disabled-base-track-color: igx-color($palette, 'grays', 400)
     );
 
     $light-theme: (
+        name: $name,
         track-color: igx-color($palette, 'secondary'),
 
         thumb-color: igx-color($palette, 'secondary'),
         disabled-thumb-color: rgba(#fff, .3),
 
-        label-color: igx-color($palette, 'secondary'),
+        label-background-color: igx-color($palette, 'secondary'),
 
         base-track-color: rgba(#fff, .3),
         disabled-base-track-color: rgba(#fff, .3)
     );
 
-    $this: ();
+    $default-theme: if($light == false or $variant == 'dark', $dark-theme, $light-theme);
 
-    @if map-get($theme, 'light') {
-        $this: extend($light-theme, $theme);
-    } @else {
-        $this: extend($dark-theme, $theme);
+    @if not($label-text-color) and not($label-background-color) {
+        $label-text-color: text-contrast(map-get($default-theme, 'label-background-color'));
     }
 
-    // @debug $this;
+    @if not($label-text-color) and $label-background-color {
+        $label-text-color: text-contrast($label-background-color);
+    }
+
+    @return extend($default-theme, (
+        palette: $palette,
+        track-color: $track-color,
+        thumb-color: $thumb-color,
+        label-background-color: $label-background-color,
+        label-text-color: $label-text-color
+    ));
+}
+
+/// @param {Map} $theme - The theme used to style the component.
+/// @requires {mixin} igx-root-css-vars
+/// @requires rem
+/// @requires var
+@mixin igx-slider($theme) {
+    @include igx-root-css-vars($theme);
+
+    // @debug $theme;
 
     $slider-height: 48px;
     $slider-track-height: 2px;
@@ -107,12 +127,12 @@
         position: absolute;
         width: 100%;
         height: $slider-track-height;
-        background: map-get($this, 'base-track-color');
+        background: var($theme, 'base-track-color');
         transition: background .2s ease;
     }
 
     %igx-slider-track--disabled {
-        background: map-get($this, 'disabled-base-track-color');
+        background: var($theme, 'disabled-base-track-color');
     }
 
     %igx-slider-track-ticks {
@@ -133,7 +153,7 @@
         position: absolute;
         width: 100%;
         height: inherit;
-        background: map-get($this, 'track-color');
+        background: var($theme, 'track-color');
         transform-origin: 0 0 0;
         transform: scaleX(0);
     }
@@ -168,11 +188,11 @@
         font-size: $slider-label-font-size;
         font-weight: $slider-label-font-weight;
         line-height: $slider-label-font-size;
-        color: text-contrast(map-get($this, 'label-color'));
-        background: map-get($this, 'label-color');
+        color: var($theme, 'label-text-color');
+        background: var($theme, 'label-background-color');
         opacity: .5;
         transform: scale(0);
-        border-color: map-get($this, 'label-color') transparent transparent;
+        border-color: var($theme, 'label-background-color') transparent transparent;
         transform-origin: 50% 150% 0;
         transition: transform .2s ease-out;
         z-index: -1;
@@ -199,7 +219,7 @@
         width: inherit;
         height: inherit;
         border-radius: $slider-thumb-radius;
-        background: map-get($this, 'thumb-color');
+        background: var($theme, 'thumb-color');
         transform: scale(1);
         transform-origin: 50% 50% 0;
         opacity: 1;
@@ -207,7 +227,7 @@
     }
 
     %igx-thumb-dot--disabled {
-        background: map-get($this, 'disabled-thumb-color');
+        background: var($theme, 'disabled-thumb-color');
         transform: scale(.9);
         border: 2px solid transparent;
     }
