--- a/src/core/styles/components/time-picker/_time-picker-theme.scss
+++ b/src/core/styles/components/time-picker/_time-picker-theme.scss
@@ -8,15 +8,19 @@
 /// will be assigned automatically to a contrasting color.
 /// Does ___not___ apply for disabled state colors.
 ///
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @param {Color} $text-color [null] - The text color of a open time picker.
 /// @param {Color} $hover-text-color [null] - The hover text color of a open time picker.
 /// @param {Color} $selected-text-color [null] -  The text color of a selected item in time picker.
-/// @param {Color} $activeList-item-background [null] - The background color for current item in focused column inside the time picker.
+/// @param {Color} $active-item-background [null] - The background color for current item in focused column inside the time picker.
 /// @param {Color} $header-background [null] - The header background color of a time picker.
 /// @param {Color} $header-hour-text-color [null] - The header hour text color of a time picker.
 /// @param {Color} $header-time-period-color [null] - The header AM/PM text color of a time picker.
+/// @param {Color} $background-color [null] - The time-picker panel background color.
 ///
+/// @requires extend
 /// @requires text-contrast
+/// @requires igx-color
 ///
 /// @example scss Change the background and text colors in  time picker
 ///   $my-time-picker-theme: igx-time-picker-theme(
@@ -25,18 +29,28 @@
 ///   );
 ///   // Pass the theme to the igx-time-picker component mixin
 ///   @include igx-time-picker($my-button-theme);
-
 @function igx-time-picker-theme(
+    $palette: $default-palette,
     $text-color: null,
     $hover-text-color: null,
     $selected-text-color: null,
-    $activeList-item-background: null,
+    $active-item-background: null,
     $header-background: null,
     $header-hour-text-color: null,
     $header-time-period-color: null,
     $background-color: null
-
 ) {
+    $default-theme: (
+        name: 'igx-time-picker',
+        text-color: igx-color($palette, 'grays', 500),
+        hover-text-color: igx-color($palette, 'secondary', 500),
+        selected-text-color: igx-color($palette, 'secondary', 500),
+        active-item-background: igx-color($palette, 'grays', 100),
+        header-background: igx-color($palette, 'secondary', 500),
+        header-hour-text-color: white,
+        header-time-period-color: rgba(255, 255, 255, .8),
+        background-color: white
+    );
 
     @if not($text-color) and $background-color {
         $text-color: text-contrast($background-color);
@@ -50,49 +64,37 @@
         $header-time-period-color: rgba(text-contrast($header-background), .8);
     }
 
-    @if not($selected-text-color) and $activeList-item-background {
-        $selected-text-color: text-contrast($activeList-item-background);
+    @if not($selected-text-color) and $active-item-background {
+        $selected-text-color: text-contrast($active-item-background);
     }
 
-    @return (
+    @return extend($default-theme, (
+        palette: $palette,
         text-color: $text-color,
         hover-text-color: $hover-text-color,
         selected-text-color: $selected-text-color,
-        activeList-item-background: $activeList-item-background,
+        active-item-background: $active-item-background,
         header-background: $header-background,
         header-hour-text-color: $header-hour-text-color,
         header-time-period-color: $header-time-period-color,
         background-color: $background-color
-    );
+    ));
 }
 
 /// @param {Map} $theme - The theme used to style the component.
-/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
-/// @requires igx-time-picker
-/// @requires igx-time-picker-theme
-/// @requires igx-color
-@mixin igx-time-picker($theme, $palette: $default-palette) {
-
-    $default-theme: igx-time-picker-theme(
-        $text-color: igx-color($palette, 'grays', 500),
-        $hover-text-color: igx-color($palette, 'secondary', 500),
-        $selected-text-color: igx-color($palette, 'secondary', 500),
-        $activeList-item-background: igx-color($palette, 'grays', 100),
-        $header-background: igx-color($palette, 'secondary', 500),
-        $header-hour-text-color: white,
-        $header-time-period-color: rgba(255, 255, 255, .8),
-        $background-color: white
-    );
+/// @requires {mixin} igx-root-css-vars
+/// @requires rem
+/// @requires var
+@mixin igx-time-picker($theme) {
+    @include igx-root-css-vars($theme);
 
     $vertical-header-width: rem(168px);
-
-    $this: extend($default-theme, $theme);
 
     %igx-time-picker__body {
         display: flex;
         padding: 10px 0;
         justify-content: center;
-        background: map-get($this, 'background-color');
+        background: var($theme, 'background-color');
     }
 
     %igx-time-picker__body--vertical {
@@ -155,7 +157,7 @@
         flex-flow: column nowrap;
         justify-content: space-between;
         align-items: center;
-        color: map-get($this, 'text-color');
+        color: var($theme, 'text-color');
         overflow: hidden;
 
         &:focus,
@@ -179,26 +181,26 @@
         }
 
         &:hover {
-            color: map-get($this, 'hover-text-color');
+            color: var($theme, 'hover-text-color');
         }
     }
 
     %igx-time-picker__item--selected {
         font-size: 24px;
-        color: map-get($this, 'selected-text-color');
+        color: var($theme, 'selected-text-color');
     }
 
     %igx-time-picker__item--active {
-        background: map-get($this, 'activeList-item-background');
+        background: var($theme, 'active-item-background');
     }
 
     %igx-time-picker__header {
-        background: map-get($this, 'header-background');
+        background: var($theme, 'header-background');
         padding: rem(24px) rem(16px);
     }
 
     %igx-time-picker__header-ampm {
-        color: map-get($this, 'header-time-period-color');
+        color: var($theme, 'header-time-period-color');
         font-size: rem(16px);
     }
 
@@ -214,11 +216,11 @@
         right: 0;
         top: 100%;
         height: 100%;
-        background: map-get($this, 'header-background');
+        background: var($theme, 'header-background');
     }
 
     %igx-time-picker__header-hour {
-        color: map-get($this, 'header-hour-text-color');
+        color: var($theme, 'header-hour-text-color');
         font-size: rem(40px);
         display: flex;
     }
